<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <Button
      style="@style/Buttons.UserActionButton"
      android:text="@string/login"/>

  <TextView
      style="@style/Text.UserNavigation"
      android:layout_alignParentBottom="true"
      android:layout_alignParentEnd="true"
      android:text="@string/select_subject"/>

  <LinearLayout
      android:layout_width="400dp"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:orientation="vertical">

    <TextView
        android:text="@string/onboarding_message"
        style="@style/Text.UserNavigation"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <include layout="@layout/subject_options" />
  </LinearLayout>

</RelativeLayout>